// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense list with Empty expenses array 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      class="list-item list-item--message"
    >
      <span>
         No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render Expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={5}
      createdAt={0}
      description="rent"
      id="1"
      key="1"
      note="hh"
    />
    <Connect(ExpenseListItem)
      amount={50}
      createdAt={10}
      description="rent2"
      id="2"
      key="2"
      note="hh"
    />
  </div>
</div>
`;
